assets/style.css
* {
  font-family: Poppins, Arial, Helvetica, sans-serif;
  font-style: normal;
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

body {
  background-color: #e5e5e5;
}

header {
  left: 0;
  right: 0;
  top: 44px;
  background-color: white;
  padding-bottom: 70px;
  padding-left: 3%;
  padding-right: 3%;
}

section > a {
  font-weight: 500;
  font-size: 16px;
  line-height: 24px;
  color: #7f8cff;
  flex: none;
  order: 0;
  flex-grow: 0;
  text-decoration: none;
}

.icon > a {
  font-weight: bold;
  font-size: 18px;
  line-height: 20px;
  color: #6070ff;
  text-decoration: none;
  flex: none;
  order: 0;
  flex-grow: 0;
  margin: 0 0;
}

nav {
  width: 100%;
  height: inherit;
  display: flex;
  justify-content: space-between;
}

.topnav > i {
  color: #6070ff;
  font-size: 24px;
}

section > h1 {
  font-weight: 700;
  font-size: 48px;
  line-height: 52px;
  display: flex;
  color: #172b4d;
  margin: 12px 0;
}

section > h1:hover {
  transform: translate(2.1rem, -2ex);
}

h2 {
  font-weight: 700;
  font-size: 40px;
}

.social_media {
  position: static;
  min-width: 193.17px;
  left: 24px;
  display: flex;
  flex-wrap: wrap;
  flex: none;
  flex-grow: 0;
  margin: 12px 0;
}

.mainmenu {
  height: 20px;
  margin-right: 100px;
  display: flex;
  flex-wrap: wrap;
  flex: none;
  order: 3;
  flex-grow: 0;
  padding: 10px 12px;
}

.social_media > li {
  margin: 10px;
  list-style: none;
}

.mainmenu > li {
  margin: 10px;
  list-style: none;
}

.mainmenu i {
  color: #505f79;
  font-size: 21px;
}

.social_media i {
  color: #505f79;
  font-size: 21px;
}

.social_media i:hover {
  color: #505f79;
  font-size: 21px;
  transition: transform 1s;
  transform: rotate(360deg);
}

.work {
  padding-top: 100px;
  display: grid;
  background-color: #e5e5e5;
}

.project {
  display: flex;
  flex-wrap: wrap;
  width: 80%;
  padding: 25px 3px 25px 25px;
  margin-left: 10%;
  margin-right: 0;
  grid-column-gap: 30px;
  margin-bottom: 100px;
  background-color: #fff;
  border-radius: 2.5%;
}

.general {
  grid-column-gap: 10px;
}

.general > h3 {
  padding-top: 8px;
}

.general > h3:hover {
  padding-top: 8px;
  transition: transform 0.6s;
  transform: scale(1.3);
}

.project_description {
  font-family: Poppins, sans-serif;
  font-style: normal;
  font-weight: normal;
  font-size: 15px;
  line-height: 24px;
  color: #344563;
  margin-top: 8px;
  text-align: justify;
  margin-bottom: 8px;
}

#general_inf {
  display: flex;
  flex-wrap: wrap;
  gap: 120px;
  flex: none;
  order: 1;
  flex-grow: 0;
}

#general_inf_1 {
  display: flex;
  flex-wrap: wrap;
  gap: 120px;
  flex: none;
  order: 1;
  flex-grow: 0;
}

#general_inf_2 {
  display: flex;
  flex-wrap: wrap;
  gap: 120px;
  flex: none;
  order: 1;
  flex-grow: 0;
}

#general_inf_3 {
  display: flex;
  flex-wrap: wrap;
  gap: 120px;
  flex: none;
  order: 1;
  flex-grow: 0;
}

.skills {
  display: flex;
  flex-wrap: wrap;
  align-items: baseline;
  justify-content: flex-start;
  padding-left: 0;
  overflow: auto;
}

.skills li {
  margin: 5px;
  background-color: #ebebfe;
  border-radius: 25%;
  margin-right: 10px;
  padding: 5px;
  font-family: Poppins, sans-serif;
  font-style: normal;
  font-weight: 500;
  font-size: 12px;
  line-height: 16px;
  color: #6070ff;
  list-style: none;
  text-align: center;
}

.mainmenu > li:hover {
  margin: 10px;
  list-style: none;
  transform: scale(1.3);
  margin-right: 3px;
}

.title {
  font-weight: 500;
  margin-top: 10px;
}

.external_link {
  border: 1px solid #396df2;
  border-radius: 5px;
  width: 124px;
  height: 48px;
  top: calc(50% - 48px / 2);
  margin-top: 16px;
  padding: 10px;
  text-align: center;
  margin-bottom: 32px;
}

.external_link a {
  text-decoration: none;
  font-family: Poppins, sans-serif;
  font-style: normal;
  font-weight: 500;
  font-size: 15px;
  line-height: 20px;
  color: #396df2;
  text-align: center;
}

.external_link:hover {
  background: #6070ff;
  border-radius: 8px;
  box-shadow: 0 8px 16px rgba(64, 83, 252, 0.24);
}

.external_link a:hover {
  color: #fff;
}

#about_me h1 {
  font-family: Poppins, sans-serif;
  font-style: normal;
  font-weight: bold;
  font-size: 40px;
  line-height: 52px;
  color: #172b4d;
  display: flex;
  align-items: flex-end;
}

#profile_link {
  display: flex;
  flex-direction: column;
}

#profile_link h2 {
  font-family: Poppins, sans-serif;
  font-style: normal;
  font-weight: 500;
  font-size: 16px;
  line-height: 24px;
  color: #7f8cff;
  margin-top: 10px;
}

#profile_link h2:hover {
  text-decoration: underline;
  text-decoration-color: #18a0fa;
  text-decoration-thickness: 3px;
}

#profile_link ul {
  display: flex;
  padding-left: 0;
}

#profile_link ul li {
  list-style: none;
  margin-right: 12px;
}

#my_resume {
  text-decoration: none;
  font-family: Poppins, sans-serif;
  font-style: normal;
  font-weight: 500;
  font-size: 17px;
  line-height: 24px;
  color: #396df2;
  border: 1px solid #396df2;
  border-radius: 5px;
  text-align: center;
  padding: 10px 10px;
  align-self: baseline;
}

#my_resume:hover {
  background-color: #6070ff;
  color: #fff;
}

#languages_skills {
  display: flex;
  flex-direction: column;
}

#my_skills ul {
  margin-right: 24px;
  list-style: none;
  border-radius: 8px;
  font-weight: 500;
  font-size: 20px;
}

#frameworks ul li {
  margin-right: 24px;
  list-style: none;
  border-radius: 8px;
  font-weight: 500;
  font-size: 20px;
  margin-top: 10px;
}

#skills-cards {
  display: flex;
  flex-direction: column;
  padding-left: 0;
  justify-content: space-between;
  margin-right: 24px;
}

.frameworks-skills {
  display: flex;
  flex-direction: column;
  padding-left: 0;
  justify-content: space-between;
  margin-right: 24px;
  margin-bottom: 0;
  margin-top: 0;
}

ul#programming {
  list-style: none;
  display: flex;
  border-radius: 8px;
  margin-bottom: 5px;
}

#frameworks {
  display: flex;
  flex-direction: column;
  padding-left: 0;
  justify-content: space-between;
}
/* ... */

